# radarx

./: .coveragerc  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.md  AUTHORS.rst  CITATION.cff  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  check_progress.py  environment.yml  make.bat  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  rst2md.sh  tox.ini
.binder/: environment.yml
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md  ci.yml  dependabot.yml
.github/workflows/: ci.yml  codecov.yml
ci/: notebooktests.yml  unittests.yml
docs/: Makefile  conf.py  history.md  index.md  index.rst  installation.md  installation.rst  io.rst  make.bat  modules.rst  radarx.io.rst  radarx.rst  reference.rst  testing.rst  usage.md  usage.rst
docs/notebooks/: IMD_Radar_Data.ipynb
examples/notebooks/: Compare_Gridding.ipynb  ExerciseonFundamentals.ipynb  Grid_Radar.ipynb  IMD_Radar_Data.ipynb  aws_data.ipynb  confest.py  gridding_rate_part1.ipynb  gridding_rate_part2.ipynb  gridding_rate_part3.ipynb  radarx_fundamentals_demo.ipynb  radarx_fundamentals_examples.ipynb
radarx/: __init__.py  accessors.py  utils.py  version.py
radarx/core/: __init__.py  conversion.py
radarx/fundamentals/: __init__.py  attenuation.py  beam.py  common.py  constants.py  doppler.py  geometry.py  power.py  principles.py  reflectivity.py  scattering.py  system.py  timing.py  variables.py
radarx/grid/: __init__.py  grid.py
radarx/io/: __init__.py  aws_data.py  imd.py
radarx/retrieve/: __init__.py  cappi.py
radarx/testing/: __init__.py  test_data_imd.py
radarx/vis/: __init__.py  maxcappi.py  plots.py
tests/: __init__.py  mock_data.py  test_accessors.py  test_cappi.py  test_radarx.py  test_utils.py
tests/core/: test_conversion.py
tests/fundamentals/: test_attenuation.py  test_beam.py  test_common.py  test_constants.py  test_doppler.py  test_geometry.py  test_power.py  test_principles.py  test_reflectivity.py  test_scattering.py  test_system.py  test_timing.py  test_variables.py
tests/grid/: test_grid.py
tests/io/: test_aws_data.py  test_imd.py
tests/testing/: test_test_timd_data.py
tests/vis/: test_maxcappi.py
